--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -81,7 +81,7 @@ body {
   text-align: center;
 }
 
-.head-2 span {
+.head-2  h2 span {
   color: #C271FF;
 }
 
@@ -103,3 +103,27 @@ body {
 .image-three img {
    border-radius: 50%;
 }
+
+.image-section h3 , p {
+   padding-left: 3rem;
+   margin-left: 2rem;
+}
+
+.image-section p span {
+    display: block;
+    padding-left: 1.2rem;
+}
+
+.image-section  .image-three p span {
+  padding-left: 0.2rem;
+}
+
+.image-section .image-two p span {
+  padding-left: 2.5rem;
+}
+
+.image-section  .image-four p span {
+  padding-left: 0.2rem;
+}
+
+
