--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -47,7 +47,7 @@ header {
   background-color: darkgray;
 }
 
-/* banner styling */
+/* banner section styling */
 .text-section {
   margin: 5rem;
   text-align: center;
@@ -125,5 +125,22 @@ body {
 .image-section  .image-four p span {
   padding-left: 0.2rem;
 }
+/* quotes section styling */
+.quotes {
+  background-color: #C271FF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  padding: 4rem;
+}
 
+.quotes .text-section2 {
+  color: #FFFFFF;
+  padding-left: 4rem;
+}
+
+.text-section2 h3 {
+  padding-top: 1rem;
+}
 
