--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -269,7 +269,6 @@ body {
 .faq-section {
   width: 920px;
   height: 707px;
-  border: 1px solid black;
   padding: 1rem;
   margin: 0 auto;
 }
@@ -288,9 +287,39 @@ body {
   text-align: center;
   padding: 1rem;
   justify-content: center;
+
 }
 
 .container-1 div p{
    text-align: start;
    padding-top: 1rem;
+}
+
+/* footer styling */
+footer {
+  background-color: #071629;
+  color: #FFFFFF;
+  text-align: center;
+  padding-top: 4rem;
+}
+
+.footer-section {
+  display: flex;
+  justify-content: space-around;
+  align-items:center;
+}
+
+.brand-icons {
+   padding: 1rem;
+   display: flex;
+   gap: 1rem;
+}
+
+.footer-logo {
+  padding: 1rem;
+}
+
+footer p {
+  padding: 4rem;
+  color: #979797;
 }
