--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -83,6 +83,8 @@ h1 {
 .head-2 h2{
   font-size: 2rem;
   text-align: center;
+  color: #979797;
+  font-weight: bold;
 }
 
 .head-2  h2 span {
@@ -91,10 +93,11 @@ h1 {
 
 .image-section {
   display: flex;
-  gap: 3rem;
+  gap: 1rem;
   justify-content: center;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  flex-wrap: wrap;
 }
 
 
@@ -113,6 +116,9 @@ h1 {
    margin-left: 2rem;
 }
 
+.image-section p{
+  color: #979797;
+}
 .image-section p span {
     display: block;
     padding-left: 1.2rem;
@@ -132,18 +138,32 @@ h1 {
 /* quotes section styling */
 .quotes {
   background-color: #C271FF;
+  height: 392px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quote-container {
   display: flex;
   align-items: center;
-  justify-content: center;
   text-align: left;
-  padding: 4rem;
+  flex-wrap: nowrap;
+  width: 943px;
+  height: 160px;
+   column-gap: 1rem;
+  padding-left: 2rem;
 }
-
 .quotes .text-section2 {
   color: #FFFFFF;
-  padding-left: 4rem;
+  width: 730px;
+  height: 158px;
 }
 
+.text-section2  blockquote{
+   font-size: 22px;
+   
+}
 .text-section2 h3 {
   padding-top: 1rem;
 }
