--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -170,13 +170,18 @@ h1 {
 
 /* video list styling */
 .video-list {
-  margin: 4rem;
   display: block;
+  width: 1228px;
+  height: 450px;
+  border: 1px solid black;
+  margin: 2rem auto;
+
 }
 
 .video-list h2 {
   text-align: center;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
+  padding-top: 2rem;
 }
 
 .video-list h2 span {
@@ -188,6 +193,7 @@ h1 {
   grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); 
   padding: 20px; 
   gap: 2rem;
+  
 }
 
 .video-container p {
