--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -61,9 +61,11 @@ header {
 }
 
 h1 {
-  font: bold;
-  font-size: 120px;
-  margin-top: 10rem;
+  font-weight: bold;
+  font-size: 145px;
+  height: 226px;
+  margin: 2rem auto;
+  word-spacing: 1rem;
 }
 
 
