style desktop nav-bar

--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -105,3 +105,21 @@ body {
     background-position: center;
     background-size: cover;
 }
+
+/* navbar styling for desktop*/
+header {
+  padding: 1rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  justify-content: space-around;
+}
+
+.nav-list {
+  display: flex;
+  color: #fff;
+  gap: 2rem;
+  align-items: center;
+}
