--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -102,34 +102,34 @@ body {
 /* hero section 1 styling */
 .hero-section{
     background-image: url(images/headphones_hero_1.jpg);
-    background-position: center;
+    background-position: top center;
     background-size: cover;
+
 }
 
 /* navbar styling for desktop*/
 header {
-  padding: 1rem;
+  padding-top: 2rem;
+  margin-bottom: 3rem;
+  padding-bottom: 2rem;
 }
 
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  padding-right: 1rem;
- 
 }
 
 .nav-list {
   display: flex;
   color: #fff;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 17px;
 }
 
-.nav-logo {
-  padding-left: 1rem;
+.nav-logo img{
+   width: 60%;
 }
-
 .hero-page {
   color: #fff;
   margin-top: 4rem;
@@ -137,15 +137,26 @@ header {
 
   .top-heading {
      text-align: center;
+     margin-top: 10rem;
+     padding-top: 4rem;
   }
 
   .top-heading h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    padding-top: 4rem;
+    border: 1px solid black;
+    margin-top: 4rem;
   }
 
   .top-heading h2 {
-    font-size: 1.2rem;
+    font-size: 18px;
   }
+/* style button */
+ .button-container {
+      display: flex;
+      justify-content: center;
+      margin: 4rem;
+ }
 
 .action-btn {
   background-color: #E94E5A;
@@ -154,4 +165,11 @@ header {
   color: white;
   font-size: 1.1rem;
   border: none;
+}
+
+.hero-paragraph {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 4rem;
 }
