--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -266,11 +266,15 @@ color: #FF6565;
 }
 
 .top-heading h1 {
- font-size: 34px;
+ font-size: 2rem;
  padding-top: 2rem;
  margin-top: 4rem;
  font-weight: bold;
- line-height: 1.1;
+ line-height: 1.2;
+ max-width: 80%;
+ margin-left: auto;
+ margin-right: auto;
+ letter-spacing: 1px;
 }
 
 
@@ -280,6 +284,10 @@ color: #FF6565;
  font-weight: 600;
  line-height: 1.2;
  padding-bottom: 1.8rem;
+ max-width: 50%;
+ margin-left: auto;
+ margin-right: auto;
+ letter-spacing: 0.8px;
 }
 
 .hero-paragraph {
@@ -299,13 +307,13 @@ color: #FF6565;
 
 .action-btn {
 background-color: #E94E5A;
-padding: 14px 36px;
+padding: 14px 24px;
 border-radius: 24px;
 color: white;
 font-size: 1.1rem;
 border: none;
 cursor: pointer;
-
+transition: 0.3s;
 }
 
 
@@ -351,27 +359,89 @@ padding-bottom: 2.5rem;
     padding-bottom: 1rem;
 }
 
+
+.font-1 p {
+    max-width: 55%;
+    margin: 0 auto;
+}
 /* tablet styling */
-@media (min-width: 600px)  and (max-width: 900px){
-  .nav-list {
+@media (min-width: 600px)  and (max-width: 1023px){
+    .hero-section {
+        background-image: url(images/headphones_hero_1.jpg);
+        background-position: center;
+        background-size: cover;
+      }
+
+    .nav-list {
     display: flex;
     color: #fff;
-    gap: 1rem;
+    gap: 3rem;
     align-items: center;
     font-size: 17px;
     padding-right: 1rem;
     }
     
+    .nav-list li:last-child {
+        padding-right: 3rem;
+    }
     .hamburger {
       display: none;
     }
 
     .nav-logo {
-      padding-left: 1rem;
+      padding-left: 5rem;
+      margin-left: 2rem;
     }
+    
+    .top-heading h1,
+    .top-heading h2 {
+        max-width: 100%;
+    }
+
+
+  .top-heading {
+    text-align: center;
+    margin-top: 4rem;
+    padding-top: 6rem;
+  }
+  
+    .button-container {
+        margin-top: 1rem;
+    }
+
+    .action-btn {
+        padding: 12px 24px;
+        border-radius: 24px;
+    }
+    
+    .hero-paragraph {
+        max-width: 80%;
+        margin:0 auto;
+        padding-top: 0px;
+    }
+    /* what we do section */
+    .what-we-do p {
+        max-width: 90%;
+        margin: 0 auto;
+    }
+    
+
+    .font-icons {
+        display: grid;
+        justify-content: center;
+        column-gap: 1rem;
+        grid-template-columns: 300px 300px;
+    }
+
+}  
+.font-1 p {
+    padding: 0px;;
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
 }
 /* desktop styling */
-@media (min-width: 901px){
+@media (min-width: 1024px){
 
 /* hero section 1 styling */
 .hero-section{
