--- a/headphones/2-styles.css
+++ b/headphones/2-styles.css
@@ -353,11 +353,12 @@ padding-bottom: 2.5rem;
 .result-section { 
     background-image: url(images/headphones_hero_2.jpg);
     background-size: cover;
-    background-position:  center top;
+    background-position:  center;
     color: white;
     background-repeat: no-repeat;
     padding-bottom: 2rem;
     padding-top: 4rem;
+    max-height: auto;
 }
   .result-content h2 {
     font-size: 34px;
@@ -367,7 +368,6 @@ padding-bottom: 2.5rem;
     text-align: center;
     line-height: 1.2;
     padding-bottom: 2rem;
-    padding-top: 2rem;
   }
 
   .result-content p {
@@ -401,7 +401,8 @@ padding-bottom: 2.5rem;
 
   .content-position span {
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 700;
+    padding-bottom: 1rem;
   }
   .pentagon img {
     width: 28%;
@@ -409,7 +410,6 @@ padding-bottom: 2.5rem;
 /* tablet styling */
 @media (min-width: 600px)  and (max-width: 1023px){
     .hero-section {
-        background-image: url(images/headphones_hero_1.jpg);
         background-position: center;
         background-size: cover;
       }
@@ -508,7 +508,6 @@ padding-bottom: 2.5rem;
 }
 
 .result-section { 
-  background-image: url(images/headphones_hero_2.jpg);
   background-size: cover;
   background-position:  75% top;
 }
@@ -524,9 +523,7 @@ padding-bottom: 2.5rem;
 
 /* hero section 1 styling */
 .hero-section{
-  background-image: url(images/headphones_hero_1.jpg);
   background-position:top center;
-  background-size: cover;
 }
 
 /* navbar styling for desktop*/
@@ -601,4 +598,40 @@ max-width: 80%;
 margin: 0 auto;
 text-align: center;
 }
+
+/* results section styling */
+.result-section {
+  background-position: 0% 30%;
+  background-size: cover;
+  max-width: 100%;
+  height: 550px;
 }
+.result-content {
+  padding-top: 1rem;
+}
+.pentagon-container {
+  display: grid;
+  justify-content: center;
+  row-gap: 1rem;
+  column-gap: 2rem;
+  grid-template-columns: repeat(4,250px);
+}
+.pentagon {
+  width: 100%;
+  padding-top: 2rem;
+}
+
+.pentagon p {
+  font-size: 12px;
+}
+.pentagon img {
+  width: 60%;
+}
+
+
+.content-position {
+  transform: translate(-50%, -35%);
+}
+}  
+
+
